交易履历页面和站内信页面文言对应

--- a/kankan/pages/main/news.html
+++ b/kankan/pages/main/news.html
@@ -133,7 +133,7 @@
 			//show message
 			function showmessage(results){
 				if(results.data.message==""){
-					$("#nomoretext").html(TextMessage.nomore);
+					$("#nomoretext").html(TextMessage.nomorenews);
 					$(".mui-pull-caption").hide();
 					$("#nomoretext").show();
 					mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
