--- a/kankan/pages/main/products/requestlist.html
+++ b/kankan/pages/main/products/requestlist.html
@@ -37,6 +37,8 @@
 						down: {
 							contentrefresh:TextMessage.update,
 							contentnomore: TextMessage.nomore,
+							contentover:TextMessage.release,
+							contentdown:TextMessage.pull_down,
 							auto: true,
 							//top:"180px",
 							callback: pulldownRefresh
