--- a/kankan/pages/main/main.html
+++ b/kankan/pages/main/main.html
@@ -25,7 +25,7 @@
 				<span class="mui-tab-label lang" data-locale="tab_1"></span>
 			</a>
 			<a class="mui-tab-item" href="products/request.html">
-				<span class="mui-icon mui-icon-extra mui-icon-extra-cart"></span>
+				<span class="mui-icon mui-icon-paperplane"></span>
 				<span class="mui-tab-label lang" data-locale="tab_5"></span>
 			</a>
 			<a class="mui-tab-item" href="products/product_login.html">
