投诉商品之后跳转到问合页面

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -464,6 +464,10 @@
 							duration: 'long',
 							type: 'div'
 						});
+						mui.openWindow({
+							id: 'question',
+							url: "../../setting/question.html"
+						});
 					},
 					ng: function(data) {
 						Log.d(data);
