--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -176,6 +176,7 @@
 		<script type="text/javascript" src="../../js/language.js"></script>
 		<script type="text/javascript" src="../../js/sha256.js"></script>
 		<script type="text/javascript" src="../../js/common.js"></script>
+		<script type="text/javascript" src="../../js/jquery.lazyload.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			var trans_id;
 			var page=0;
@@ -397,7 +398,7 @@
 						if(seller_comm_info.length > 1) {
 							seller_msg += '<img src="../../images/morebut.png" style="position:absolute;float:right;margin-left:72%;width: 25px; height: 25px;">';
 						}
-						seller_msg += '<img  style="'+seller_top_margin+'" class="mui-media-object" src="' + seller_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
+						seller_msg += '<img  style="'+seller_top_margin+'" class="mui-media-object" data-original="' + seller_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
 						seller_msg += '</a>';
 						seller_msg += '<input type="hidden" name="seller_commodity_id" value="' + seller_comm_id + '">';
 						seller_msg += '<input type="hidden" name="seller_user_id" value="' + seller_id + '">';
@@ -410,7 +411,7 @@
 					if(buyer_comm_info.length > 1) {
 						buyer_msg += '<img id="moreicon" src="../../images/morebut.png" style="position:absolute;float:right;margin-left:72%;width: 25px; height: 25px;">';
 					}
-					buyer_msg += '<img style="'+buyer_top_margin+'" class="mui-media-object" src="' + buyer_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
+					buyer_msg += '<img style="'+buyer_top_margin+'" class="mui-media-object" data-original="' + buyer_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
 					buyer_msg += '</a>';
 					buyer_msg += '<input type="hidden" name="buyer_commodity_id" value="' + buyer_comm_id + '">';
 					buyer_msg += '<input type="hidden" id="buyer_user_id" name="buyer_user_id" value="' + buyer_id + '">';
@@ -433,7 +434,7 @@
 						//seller_img += '<img class="ka_touxiangimg" height="32px" width="32px" src="' + seller_photo + '" />';
 						//seller_img += '<font size="2" vertical-align="middle">' + seller_nickname + '</font>';
 						//seller_img += '</div>';
-						seller_msg += '<img style="'+seller_top_margin+'" class="mui-media-object" src="' + seller_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
+						seller_msg += '<img style="'+seller_top_margin+'" class="mui-media-object" data-original="' + seller_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
 						seller_msg2 +='<img src="../../images/jiantou.png" width="20" height="20"><img class="ka_touxiangimg" height="40px" width="40px" src="' + buyer_photo + '" style="margin-left:1.5em;margin-top:20%;" />';
 						seller_msg2 += '</a>';
 						$(".other li").html(seller_msg);
@@ -445,13 +446,19 @@
 						seller_img += '<img class="ka_touxiangimg" height="32px" width="32px" src="' + seller_photo + '" />';
 						seller_img += '<font size="2" vertical-align="middle">' + seller_nickname + '</font>';
 						seller_img += '</div>';
-						seller_msg += '<img style="'+seller_top_margin+'" class="mui-media-object" src="' + seller_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
+						seller_msg += '<img style="'+seller_top_margin+'" class="mui-media-object" data-original="' + seller_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
 						seller_msg += '</a>';
 						$(".other .otherli").html(seller_msg);
 						$(".other .otherliimg").remove();
 						$(".other-img li").html(seller_img);
 					}
 				}
+				$("img.mui-media-object").lazyload({
+					threshold: 90,
+					placeholder: "../../images/nopic.jpg",
+					effect: "fadeIn",
+					failure_limit : 2
+				});
 
 			}
 
