交易履历返回request的时候下面的tab bar 不显示问题修改 request页面下拉刷新的圈圈位置调整

--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -84,7 +84,10 @@
 				height: 40px;
 				margin: 0 auto;
 			}
-			
+			.mui-pull-top-tips.mui-transitioning {
+                top:90px;
+                position:relative;
+            }
 			.mui-pull-top-canvas canvas {
 				width: 40px;
 			}
