用户页面图片显示处理，站内信首次加载页面loading显示

--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -626,7 +626,7 @@
 					
 				}
 				exhibit_html+='<a id="'+commexid+'" href="#">';
-				exhibit_html+='<div class="pimgbox" style="height:'+imgwidth+'px;"><img class="exhibit" style="width: 100%;height:'+imgwidth+'px;" data-original="'+commeximg_url+'"></div>';
+				exhibit_html+='<div class="pimgbox" style="height:'+imgwidth+'px;"><img class="exhibit" style="width: 100%;margin-top:'+toppx+'px;" data-original="'+commeximg_url+'"></div>';
 				exhibit_html+='<div class="comm-name mui-col-sm-12">'+exhibitcomname+'</div>';
 				exhibit_html+='</a>';
 				exhibit_html+='</li>';
@@ -667,7 +667,7 @@
 				}
 				praise_html+='<li class="user-goods-grid detail">';
 				praise_html+='<a id="'+praisepid+'" href="#">';
-				praise_html+='<div class="pimgbox" style="height:'+imgwidth+'px;"><img style="width: 100%;height:'+imgwidth+'px;" src="'+praiseimg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
+				praise_html+='<div class="pimgbox" style="height:'+imgwidth+'px;"><img style="width: 100%;margin-top:'+toppxpra+'px;" src="'+praiseimg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
 				praise_html+='<div class="comm-name mui-col-sm-12">'+praisecomname+'</div>';
 				praise_html+='</a>';
 				praise_html+='</li>';
