--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -92,16 +92,17 @@
 
 							</li>
 						</ul>
-						<center>
-						<ul class="mui-table-view mui-grid-view other" style="display:none;text-align:center;margin-top:10px;position: inherit;padding:0 10px 10px 10px;">
-							<li class="mui-table-view-cell mui-media mui-col-xs-5 liheight otherli" style="padding:0px;">
+						<ul class="mui-row mui-table-view mui-grid-view other liheight" style="display:none;text-align:center;margin-top:10px;position: inherit;padding:0 10px 10px 10px;">
+							<li class="mui-table-view-cell mui-media mui-col-xs-4 liheight otherli" style="padding:0px; margin-left: 0;">
 
 							</li>
-							<li class="mui-table-view-cell mui-media mui-col-xs-5 liheight otherliimg" style="padding:0px;">
+                            <li class="mui-col-xs-4 secondLi">
+
+							</li>
+							<li class="mui-table-view-cell mui-media mui-col-xs-4 liheight otherliimg" style="padding:0px;">
 
 							</li>
 						</ul>
-						</center>
 						<ul class="tran-button">
 							<li class="tran-button-sell stop" style="display:none;" >
 								<div id="stopTransaction">
@@ -110,7 +111,7 @@
 							</li>
 							<!--<li class="tran-button-middle">
 							</li>-->
-							<li class="tran-button-buy" style="display:none;">
+							<li class="tran-button-buy" style="display:none; margin-left: 5%;">
 								<div>
 									<font size="2" color="#FFFFF" vertical-align="middle"></font>
 								</div>
@@ -327,7 +328,7 @@
 
 			function showTranCommodMsg(transinfo, usersinfo, commdinfo, cur_user_id) {
 				var buyer_photo, buyer_nickname, buyer_id, seller_photo, seller_nickname, seller_id, trans_mode, buyer_msg = '',
-					seller_msg = '',seller_msg2 = '';
+					seller_msg = '',seller_msg1 = '';seller_msg2 = '';
 				var buyer_comm_info = new Array();
 				var seller_comm_info = new Array();
 				for(var user in usersinfo) {
@@ -345,6 +346,7 @@
 				var seller_comm_exist = false;
 				var seller_img='',buyer_img='',buyer_top_margin='',seller_top_margin='';
 				$(".liheight").attr("style","height:"+imgwidth+"px;overflow:hidden;");
+				$(".secondLi").attr("style","height:"+imgwidth+"px;line-height:"+imgwidth+"px; text-align: center;");
 				for(var goods in commdinfo) {
 					if(commdinfo[goods].user_id == buyer_id) {
 						buyer_comm_id = commdinfo[goods].commodity_id;
@@ -430,14 +432,21 @@
 				} else {
 					if(cur_user_id==seller_id){
 						seller_msg += '<a href="#">';
-						//seller_img += '<div class="mui-media-body" style="height:35px;margin-top:0px;">';
-						//seller_img += '<img class="ka_touxiangimg" height="32px" width="32px" src="' + seller_photo + '" />';
-						//seller_img += '<font size="2" vertical-align="middle">' + seller_nickname + '</font>';
-						//seller_img += '</div>';
-						seller_msg += '<img style="'+seller_top_margin+'" class="mui-media-object" data-original="' + seller_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
-						seller_msg2 +='<img src="../../images/jiantou.png" width="20" height="20"><img class="ka_touxiangimg" height="40px" width="40px" src="' + buyer_photo + '" style="margin-left:1.5em;margin-top:20%;" />';
-						seller_msg2 += '</a>';
-						$(".other li").html(seller_msg);
+						seller_msg += '<img style="'+seller_top_margin+'" class="imageOne mui-media-object" src="' + seller_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
+						seller_msg += '</a>';
+						
+						seller_msg1 += '<img src="../../images/jiantou.png" width="20" height="20">';
+						
+						seller_msg2 += '<div style="text-align: left; line-height: '+imgwidth+'px'+'";>';
+						seller_msg2 += '<img class="ka_touxiangimg" height="40px" width="40px" src="' + buyer_photo + '"/>';
+						seller_msg2 += '</div>';
+						if (showheight < imgwidth) {
+							$(".other .otherli").attr("style", "margin-left: 0.5rem;display: relative;top:"+ (imgwidth-showheight)/2 +"px;left:"+ (imgwidth-showheight)/2 +"px;");
+						} else {
+							$(".other .otherli").attr("style", "margin-left: 0.5rem;height:"+imgwidth+"px;line-height:"+imgwidth+"px;");
+						}
+						$(".other .otherli").html(seller_msg);
+						$(".secondLi").html(seller_msg1);
 						$(".other .otherliimg").html(seller_msg2);
 						//$(".other-img li").html(seller_img);
 					}else{
@@ -448,6 +457,7 @@
 						seller_img += '</div>';
 						seller_msg += '<img style="'+seller_top_margin+'" class="mui-media-object" data-original="' + seller_comm_img + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
 						seller_msg += '</a>';
+						$(".other .otherli").attr("style", "margin-left: 33%;");
 						$(".other .otherli").html(seller_msg);
 						$(".other .otherliimg").remove();
 						$(".other-img li").html(seller_img);
