--- a/kankan/pages/main/news.html
+++ b/kankan/pages/main/news.html
@@ -34,8 +34,8 @@
 		    <h1 class="mui-title lang" data-locale="messagetitle"></h1>
 		</header>
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
-			<div  id="reloadpage" onclick="reloadpage()"  style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
   			<div class="mui-scroll">
+  				<div  id="reloadpage"  style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
 				<ul id="OA_task_1" class="mui-table-view">
 					
 				<!--<li class="mui-table-view-cell">
@@ -69,6 +69,7 @@
 			        contentinit: "",
 			        contentdown:TextMessage.upmore,
 			        callback: pullupRefresh,
+			        //auto:true,
 			      },
 			      down : {
 				      	contentrefresh: TextMessage.loading,
@@ -88,7 +89,7 @@
 		  function reloadpage(){
 		  	location.reload();
 		  }
-		 $('#reloadpage').on('tap', 'font', function(event) {
+		 mui("#pullrefresh").on("tap", "#reloadpage", function(event) {
 				location.reload();
 			});
 		  //delete message
@@ -176,6 +177,7 @@
 		  		mui('#pullrefresh').pullRefresh().refresh(true);
 		  		$("#OA_task_1").empty();
 		  		setTimeout(function(){
+		  			$(".mui-pull-caption").show();
 		  			getmessage(0);
 		  			mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
 		  		},500);
@@ -205,7 +207,7 @@
 					error:function(errortypetext){
 						$("#reloadpage").html(errortypetext);
 						$(".mui-pull").hide();
-						$(".mui-scroll").hide();
+						$("#OA_task_1").hide();
 						$("#reloadpage").show();
 					}
 				});
