--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/news.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/news.html
@@ -33,7 +33,7 @@
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title lang" data-locale="messagetitle"></h1>
 		</header>
-		<div id="pullrefresh" class="mui-content mui-scroll-wrapper" style="margin-top: -3em;">
+		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div  id="reloadpage" onclick="reloadpage()"  style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
   			<div class="mui-scroll">
 				<ul id="OA_task_1" class="mui-table-view">
@@ -82,9 +82,9 @@
 					mui.fire(homePage, 'refresh',{refresh:"canRefresh"});
 			    }
 		  });  
-		  mui.plusReady(function() {
-		  	$("#pullrefresh").attr("style","margin-top:-3em");
-		  });
+//		  mui.plusReady(function() {
+//		  	$("#pullrefresh").attr("style","margin-top:-3em");
+//		  });
 		  function reloadpage(){
 		  	location.reload();
 		  }
@@ -133,7 +133,7 @@
 			//show message
 			function showmessage(results){
 				if(results.data.message==""){
-					$("#nomoretext").html(TextMessage.nomore);
+					$("#nomoretext").html(TextMessage.nomorenews);
 					$(".mui-pull-caption").hide();
 					$("#nomoretext").show();
 					mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
