--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/pro_commentslist.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/pro_commentslist.html
@@ -67,6 +67,7 @@
 		<script src="../../../js/language.js"></script>
 		<script src="../../../js/sha256.js"></script>
 		<script src="../../../js/common.js"></script>
+		<script type="text/javascript" src="../../../js/jquery.lazyload.min.js"></script>
 		<script type="text/javascript">
 //			window.addEventListener('comid', function(event) {
 //				var id = event.detail.id;
@@ -183,7 +184,7 @@
 					var time = pcommentinfo.ins_date;
 					var html = new Util.StringBuilder();
 					html.append('<div class="comtent mui-pull-left"><div class="mui-pull-left">')
-						.appendFormat('<img src="{0}" width="40" height="40" class="ka_touxiangimg" />', headimg)
+						.appendFormat('<img data-original="{0}" width="40" height="40" class="ka_touxiangimg" />', headimg)
 						.appendFormat('<div class="ka_userbox ka_userboxtext"><b>{0}</b></div>', uname)
 						.append('</div>')
 						.append('<div class="mui-pull-right ka_commentinfobox">')
@@ -194,6 +195,12 @@
 						.append('</div></div></div>');
 					$("#comments").append(html.toString());
 				}
+				$("img.ka_touxiangimg").lazyload({
+					threshold: 200,
+					placeholder: "../../../images/nopic.jpg",
+					effect: "fadeIn",
+					failure_limit : 10
+				});
 			}
 			function formSubmit(){
 				var contents=document.commodity_comments.leave_msg_detail.value;
@@ -269,7 +276,7 @@
 				var uname2=results.data[0].nick_name;
 				var html2 = new Util.StringBuilder();
 					html2.append('<div class="comtent mui-pull-left"><div class="mui-pull-left">')
-						.appendFormat('<img src="{0}" width="40" height="40" class="ka_touxiangimg" />', headimg2)
+						.appendFormat('<img data-original="{0}" width="40" height="40" class="ka_touxiangimg" />', headimg2)
 						.appendFormat('<div class="ka_userbox ka_userboxtext"><b>{0}</b></div>', uname2)
 						.append('</div>')
 						.append('<div class="mui-pull-right ka_commentinfobox">')
@@ -281,6 +288,12 @@
 					$("#comments").prepend(html2.toString());
 					document.commodity_comments.leave_msg_detail.value="";
 					$("#null").hide();
+			    $("img.ka_touxiangimg").lazyload({
+			    	threshold: 200,
+					placeholder: "../../../images/nopic.jpg",
+					effect: "fadeIn",
+					failure_limit : 10
+			    });
 			}
 		</script>
 	</body>
