--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -68,7 +68,6 @@
 		<link href="../../../css/mui.poppicker.css" rel="stylesheet" />
 		 <link rel="stylesheet" type="text/css" href="../../../css/public.css">
 	    <link rel="stylesheet" type="text/css" href="../../../css/mobileSelect.css">
-	    <script src="../../../js/mobileSelect.js" type="text/javascript"></script>
 	</head>
 
 	<body>
@@ -277,9 +276,11 @@
 	<script src="../../../js/mui.min.js"></script>
 	<script src="../../../js/mui.view.js "></script>
 	<script src="../../../js/common.js"></script>
-	<script src="../../../js/picker/city.data.js"></script>
+	<script src="../../../js/citydata.js" type="text/javascript"></script>
+	<script src="../../../js/mobileSelect.js" type="text/javascript"></script>
+	<!--<script src="../../../js/picker/city.data.js"></script>
 	<script src="../../../js/picker/mui.picker.js"></script>
-	<script src="../../../js/picker/mui.poppicker.js"></script>
+	<script src="../../../js/picker/mui.poppicker.js"></script>-->
 	<script src='../../../js/feedback.js'></script>
 	<script src="../../../js/jquery-3.2.0.min.js"></script>
 	<script src="../../../js/language.js"></script>
@@ -425,7 +426,7 @@
 					uploadimage(target)
 				},
 				function(error) {
-					alert("Compress error!" + error.message);
+					alert("Compress error!" + error.code);
 				});
 		}
 		function getImage() {
@@ -861,7 +862,7 @@
 					positions=chosecictval(address);
 					mobileSelect4 = new MobileSelect({
 					    trigger: '#city',
-					    title: '地区选择',
+					    title: '',
 					    wheels: cityData, 
 					    position:positions+",",
 					    //position:"12",
@@ -911,92 +912,7 @@
 				}
 			});
 			
-		});
-		var cityData = [
-		{
-			data:[{
-			"id": 1,
-			"value": "北海道"
-			},
-			{
-				"id": 8011,
-				"value": "青森県"
-			},
-			{
-			"id": 10043,
-			"value": "岩手県"
-			},
-			{
-				"id": 11954,
-				"value": "宮城県"
-			},
-			{
-			"id": 14749,
-			"value": "秋田県"
-			},
-			{
-				"id": 16900,
-				"value": "山形県"
-			},
-			{
-			"id": 18840,
-			"value": "福島県"
-			},
-			{
-				"id": 22437,
-				"value": "茨城県"
-			},
-			{
-			"id": 25284,
-			"value": "栃木県"
-			},
-			{
-				"id": 27114,
-				"value": "群馬県"
-			},
-			{
-			"id": 28611,
-			"value": "埼玉県"
-			},
-			{
-				"id": 31540,
-				"value": "千葉県"
-			},
-			{
-			"id": 35122,
-			"value": "東京都"
-			},
-			{
-				"id": 38853,
-				"value": "神奈川県"
-			},
-			{
-			"id": 41134,
-			"value": "新潟県"
-			},
-			{
-				"id": 46471,
-				"value": "富山県"
-			},
-			{
-			"id": 49442,
-			"value": "石川県"
-			},
-			{
-				"id": 51892,
-				"value": "福井県"
-			},
-			{
-			"id": 54020,
-			"value": "山梨県"
-			},
-			{
-				"id": 54960,
-				"value": "長野県"
-			}
-			]
-		}
-	];
+	});
 	function chosecictval(addresstext){
 		console.dir(cityData[0].data);
 		var cityvaluearr=cityData[0].data;
