用户页面标签颜色调整

--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -72,7 +72,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"><font size="4" class="lang" data-locale="back"></font></a>
+		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: #007aff;"><font size="4" class="lang" data-locale="back"></font></a>
 		    <h1 class="mui-title maintitle"></h1>
 		    <a href="../../setting/setting.html" class="settingbut">
 				<button type="button" class="mui-right mui-btn mui-btn-link mui-btn-nav mui-pull-right">
