--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -64,8 +64,8 @@
 		<link rel="stylesheet" type="text/css" href="../../../css/feedback.css" />
 		<link rel="stylesheet" href="../../../css/kankan_home.css">
 		<link rel="stylesheet" href="../../../css/wu.css">
-		<link href="../../../css/mui.picker.css" rel="stylesheet" />
-		<link href="../../../css/mui.poppicker.css" rel="stylesheet" />
+		<!--<link href="../../../css/mui.picker.css" rel="stylesheet" />
+		<link href="../../../css/mui.poppicker.css" rel="stylesheet" />-->
 		 <link rel="stylesheet" type="text/css" href="../../../css/public.css">
 	    <link rel="stylesheet" type="text/css" href="../../../css/mobileSelect.css">
 	</head>
