--- a/kankan/pages/main/user/useredite.html
+++ b/kankan/pages/main/user/useredite.html
@@ -24,12 +24,12 @@
 		<div class="mui-content" style="display: none;">
 			<form method="post" name="userinfosub" id="userinfosub">
 				<div class="ka_editebox">
-					<div class="head-img-box ka_userimagebox editeimg" style="width: 100%;margin-left: -43%;">
+					<div class="head-img-box ka_userimagebox editeimg" style="width: 20%;">
 						<img src="../../../images/userPhoto.png" height="50" width="50" class="headimg" />
 					</div>
 					<div class="ka_usernicknamebox">
 					<h6 class="lang" data-locale="uinfousername"></h6>
-					<textarea type="text" name="nickname" id="nickname" value="" data-locale="nameplocder"  class="ka_userfontsize lang" rows="1" ></textarea>
+					<input type="text" name="nickname" id="nickname" value="" data-locale="nameplocder"  class="ka_userfontsize lang" rows="1"  />
 					</div>
 					<h6 class="lang" data-locale="introducetext" style="display: none;"></h6>
 					<textarea name="introduce" id="introduce" rows="5" cols="" class="ka_userfontsize" maxlength="500" style="display: none;"></textarea>
