商品编辑页面图片长宽字段添加

--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -349,20 +349,20 @@
 			$("#stauteResult").html(TextMessage.prostaute3);
 		}
 		if(image0!=""){
-			document.getElementById('0').value=image0;
-			imagepull(0,image0);
+			document.getElementById('0').value=image0.imgurl;
+			imagepull(0,image0.imgurl);
 		}
 		if(image1!=""){
-			document.getElementById('1').value=image1;
-			imagepull(1,image1);
+			document.getElementById('1').value=image1.imgurl;
+			imagepull(1,image1.imgurl);
 		}
 		if(image2!=""){
-			document.getElementById('2').value=image2;
-			imagepull(2,image2);
+			document.getElementById('2').value=image2.imgurl;
+			imagepull(2,image2.imgurl);
 		}
 		if(image3!=""){
-			document.getElementById('3').value=image3;
-			imagepull(3,image3);
+			document.getElementById('3').value=image3.imgurl;
+			imagepull(3,image3.imgurl);
 		}
 		if(business=="1"){
 			$("#pointbuybtn").removeClass("ka_exchangegrey");
