--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -7,8 +7,10 @@
 		<title></title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/style.css" rel="stylesheet" />
-		<link href="../../css/mui.picker.css" rel="stylesheet" />
-		<link href="../../css/mui.poppicker.css" rel="stylesheet" />
+		<!--<link href="../../css/mui.picker.css" rel="stylesheet" />
+		<link href="../../css/mui.poppicker.css" rel="stylesheet" />-->
+		<link rel="stylesheet" type="text/css" href="../../css/public.css">
+	    <link rel="stylesheet" type="text/css" href="../../css/mobileSelect.css">
 		<style>
 			.area {
 				margin: 20px auto 0px auto;
@@ -214,9 +216,11 @@
 		<script type="text/javascript" src="../../js/sha256.js"></script>
 		<script type="text/javascript" src="../../js/md5.js"></script>
 		<script type="text/javascript" src="../../js/common.js"></script>
-		<script type="text/javascript" src="../../js/picker/mui.picker.js"></script>
+		<script src="../../js/citydata.js" type="text/javascript"></script>
+		<script src="../../js/mobileSelect.js" type="text/javascript"></script>
+		<!--<script type="text/javascript" src="../../js/picker/mui.picker.js"></script>
 		<script type="text/javascript" src="../../js/picker/mui.poppicker.js"></script>
-		<script type="text/javascript" src="../../js/picker/city.data.js"></script>
+		<script type="text/javascript" src="../../js/picker/city.data.js"></script>-->
 		<script type="text/javascript" charset="utf-8">
 			(function(mui, doc) {
 				mui.init();
@@ -438,27 +442,41 @@
 							}
 						});
 					});
-
+					var mobileSelect4 = new MobileSelect({
+					    trigger: '#city',
+					    title: '',
+					    wheels: cityData, 
+					    position:"0",
+					    transitionEnd:function(indexArr, data){
+					        //console.log(indexArr);
+					    },
+					    callback:function(indexArr, data){
+					        console.log(data);
+					        var cityElement = document.getElementById('city');
+							cityElement.value = data[0].value;
+							cityElement.setAttribute('data-val', data[0].id);
+					    }  
+					});
 					// address logic
-					var cityPickerBtn = doc.getElementById('showCityPicker');
-					var cityInput = doc.getElementById('city');
-					var cityPicker = new mui.PopPicker();
-					cityPicker.setData(cityData);
-					cityPickerBtn.addEventListener('tap', function(event) {
-						showCityPicker();
-					});
-					cityInput.addEventListener('tap', function(event) {
-						showCityPicker();
-					});
-
-					var showCityPicker = function() {
-						Log.i("click cityPicker");
-						cityPicker.show(function(items) {
-							var cityElement = doc.getElementById('city');
-							cityElement.value = items[0].text;
-							cityElement.setAttribute('data-val', items[0].value);
-						});
-					}
+//					var cityPickerBtn = doc.getElementById('showCityPicker');
+//					var cityInput = doc.getElementById('city');
+//					var cityPicker = new mui.PopPicker();
+//					cityPicker.setData(cityData);
+//					cityPickerBtn.addEventListener('tap', function(event) {
+//						showCityPicker();
+//					});
+//					cityInput.addEventListener('tap', function(event) {
+//						showCityPicker();
+//					});
+//
+//					var showCityPicker = function() {
+//						Log.i("click cityPicker");
+//						cityPicker.show(function(items) {
+//							var cityElement = doc.getElementById('city');
+//							cityElement.value = items[0].text;
+//							cityElement.setAttribute('data-val', items[0].value);
+//						});
+//					}
 					
 					doc.getElementById('clause').addEventListener('tap', function(event){
 						mui.openWindow({
