--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -441,7 +441,7 @@
 						seller_msg2 += '<img class="ka_touxiangimg" height="40px" width="40px" src="' + buyer_photo + '"/>';
 						seller_msg2 += '</div>';
 						if (showheight < imgwidth) {
-							$(".other .otherli").attr("style", "margin-left: 0.5rem;display: relative;top:"+ (imgwidth-showheight)/2 +"px;left:"+ (imgwidth-showheight)/2 +"px;");
+							$(".other .otherli").attr("style", "margin-left: 0.5rem;position: relative;top:"+ (imgwidth-showheight)/2 +"px;left:"+ (imgwidth-showheight)/2 +"px;");
 						} else {
 							$(".other .otherli").attr("style", "margin-left: 0.5rem;height:"+imgwidth+"px;line-height:"+imgwidth+"px;");
 						}
