--- a/kankan/pages/main/products/requestlist.html
+++ b/kankan/pages/main/products/requestlist.html
@@ -89,9 +89,9 @@
 					}
 					var comm_name=HTMLDecode(trans[0].comm_name);
 					var html = new Util.StringBuilder();
-					html.appendFormat('<li class="mui-table-view-cell transli" style="width:100%;"><a class="mui-navigate-right" id="{0}"><div class="mui-pull-left"><img class="lazy" data-original="{1}" style="width: 60px;max-height: 60px;"></div>',trans_id,comm_img)
-						.appendFormat('<div class="mui-pull-left requestbox"><span>{0}</span><div><font color="#0062CC" style="display:none;">{1}P</font></div></div>',comm_name,price)
-						.appendFormat('<div class="mui-pull-right ka_userbox {0}">{1}</div></a></li>',trstatus=="3" ? "requestsuccess":"requeststop",status);
+					html.appendFormat('<li class="mui-row mui-table-view-cell transli" style="width:100%; height: 76px;"><a class="mui-navigate-right" id="{0}"><div class="mui-pull-left mui-col-xs-2"><img class="lazy" data-original="{1}" style="width: 60px;max-height: 60px;"></div>',trans_id,comm_img)
+						.appendFormat('<div class="mui-pull-left mui-col-xs-2 requestbox">{0}<div><font color="#0062CC" style="display:none;">{1}P</font></div></div>',comm_name,price)
+						.appendFormat('<div style="margin-left: 2rem;" class="mui-pull-left mui-col-xs-6 ka_userbox"><div class="{0}">{1}</div></div></a></li>',trstatus=="3" ? "requestsuccess":"requeststop",status);
 					$("#historyshow").append(html.toString());
 					lazyload();
 					$("#historyshow").show();
