--- a/kankan/pages/main/products/requestlist.html
+++ b/kankan/pages/main/products/requestlist.html
@@ -19,7 +19,7 @@
 			<div id="pullrefresh" class="mui-scroll-wrapper" style="margin-top: 1em;">
 				<div class="mui-scroll" >
 					<div  id="reloadpage" onclick="reloadpage()" style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
-					<ul class="mui-table-view mui-grid-view" id="historyshow" style="display: none;">
+					<ul class="mui-table-view mui-grid-view" id="historyshow" style="padding-top: 0.88rem;display: none;">
 					</ul>
 				</div>
 			</div>
@@ -90,8 +90,8 @@
 					var comm_name=HTMLDecode(trans[0].comm_name);
 					var html = new Util.StringBuilder();
 					html.appendFormat('<li class="mui-row mui-table-view-cell transli" style="width:100%; height: 76px;"><a class="mui-navigate-right" id="{0}"><div class="mui-pull-left mui-col-xs-2"><img class="lazy" data-original="{1}" style="width: 60px;max-height: 60px;"></div>',trans_id,comm_img)
-						.appendFormat('<div class="mui-pull-left mui-col-xs-2 requestbox">{0}<div><font color="#0062CC" style="display:none;">{1}P</font></div></div>',comm_name,price)
-						.appendFormat('<div style="margin-left: 2rem;" class="mui-pull-left mui-col-xs-6 ka_userbox"><div class="{0}">{1}</div></div></a></li>',trstatus=="3" ? "requestsuccess":"requeststop",status);
+						.appendFormat('<div style="text-overflow: ellipsis;overflow: hidden;" class="mui-pull-left mui-col-xs-3 requestbox">{0}<div><font color="#0062CC" style="display:none;">{1}P</font></div></div>',comm_name,price)
+						.appendFormat('<div style="margin-left: 0.3rem;" class="mui-pull-left mui-col-xs-6 ka_userbox"><div class="{0}">{1}</div></div></a></li>',trstatus=="3" ? "requestsuccess":"requeststop",status);
 					$("#historyshow").append(html.toString());
 					lazyload();
 					$("#historyshow").show();
